# tuxtype

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
cmake/: config.h.in
po/: LINGUAS
src/: SDL_extras.c  alphabet.c  audio.c  braille.c  braille.h  convert_utf.c  editor.c  globals.h  input_methods.c  laser.c  loaders.c  main.c  menu.c  pause.c  playgame.c  practice.c  scripting.c  setup.c  theme.c  titlescreen.c  titlescreen.h
